# vendra-oa

./: DYNAMIC_PARSING_IMPROVEMENTS.md  README.md  SETUP.md  SOLUTION_SUMMARY.md  debug_quote_2.py  parse_quote.py  pyproject.toml  requirements.txt  sample_quote_advanced_result.json  sample_quote_result.json  setup.py  test_currency_fix.py  test_european_format.py  test_european_normalization.py  test_exact_line_debug.py  test_multi_format.py  test_regex_debug.py  test_summary_fix.py  test_unit_price_fix.py
docs/: ENHANCED_TABLE_PARSER.md  ROBUST_PARSER_IMPROVEMENTS.md  TECHNICAL_WRITEUP.md
examples/: enhanced_table_demo.py  example_usage.py  robust_parser_demo.py
src/vendra_parser/: __init__.py  adaptive_parser.py  advanced_parser.py  cli.py  comprehensive_parser.py  domain_parser.py  enhanced_table_parser.py  file_picker.py  financial_calculator.py  invoice2data_parser.py  models.py  multi_format_parser.py  ocr_parser.py  parser.py  pdf_extractor.py  robust_ocr.py  robust_parser.py  smart_classifier.py  table_parser.py
src/vendra_quote_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_enhanced_table_parser.py  test_parser.py  test_robust_parser.py
